--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,11 @@
 # production
 /build
 
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 # misc
 .DS_Store
 .env.local
@@ -19,8 +24,5 @@
 .env.production.local
 .vscode
 .firebase
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+*scratch.svg
 
